--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="hero-image">
                 <div class="profile-card">
                     <div class="profile-avatar">
-                        <img src="photo.jpg" alt="Ashish Gupta Profile Photo">
+                        <i class="fas fa-user-shield"></i>
                     </div>
                     <div class="profile-info">
                         <h3>Ashish Gupta</h3>
